[A] Readded my graph class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,18 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_subdirectory(lib/graph)
 
+include_directories(lib
+        lib/graph/include)
+
 set(PROJECT_HEADERS
         src/cli/Helpy.h
-        lib/graph/src/implementation/Graph.h
-        lib/graph/src/UGraph.h
+        lib/graph/include/UGraph.h
         lib/libfort/fort.hpp
         src/utils/Reader.h
         src/utils/Utils.hpp)
 
 set(PROJECT_SOURCES
         src/cli/Helpy.cpp
-        lib/graph/src/implementation/Graph.cpp
         lib/graph/src/UGraph.cpp
         lib/libfort/fort.c
         src/main.cpp
@@ -24,6 +25,3 @@ set(PROJECT_SOURCES
 add_executable(DA-Proj2
         ${PROJECT_HEADERS}
         ${PROJECT_SOURCES})
-
-target_include_directories(DA-Proj2
-        lib/graph/include)
