[F] Fixed compile errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,19 +9,24 @@ include_directories(lib
         lib/graph/include)
 
 set(PROJECT_HEADERS
-        src/cli/Helpy.h
         lib/graph/include/UGraph.h
+        lib/graph/src/Graph.h
         lib/libfort/fort.hpp
+        src/cli/Helpy.h
+        src/network/DataGraph.h
+        src/network/Place.hpp
         src/utils/Reader.h
         src/utils/Utils.hpp)
 
 set(PROJECT_SOURCES
-        src/cli/Helpy.cpp
         lib/graph/src/UGraph.cpp
+        lib/graph/src/Graph.cpp
         lib/libfort/fort.c
+        src/cli/Helpy.cpp
+        src/network/DataGraph.cpp
         src/main.cpp
         src/utils/Reader.cpp)
 
-add_executable(DA-Proj2
+add_executable(DA_Proj2
         ${PROJECT_HEADERS}
         ${PROJECT_SOURCES})
